--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 0.707107 0.707107 -0.707107 11 12.1211)" fill="#F4EADD"/>
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 -0.707107 -0.707107 -0.707107 13.1213 34.749)" fill="#F4EADD"/>
         </svg>
-        <a href="../work/index.html">Work</a>
+        <a href="../work">Work</a>
         <a href="./index.html">About</a>
     </nav>
 
@@ -35,7 +35,7 @@
         <nav>
             <ul class="nav-links">
                 <li>
-                    <a href="../work/index.html">Work</a>
+                    <a href="../work">Work</a>
                 </li>
                 <li>
                     <a id="about" href="./index.html">About</a>
@@ -169,8 +169,8 @@
                 </svg>
                 <a href="../index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="">Don't tap here</a>
-            <a class="funny-link-desktop" href="">Don't click here</a>
+            <a class="funny-link-mobile" href="../hidden-page/">Don't tap here</a>
+            <a class="funny-link-desktop" href="../hidden-page/">Don't click here</a>
         </div>
     </footer>
 </div>
