--- a/hidden-page/index.html
+++ b/hidden-page/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Adecco - Pabla Marmolejo Porftolio UX/UI Designer</title>
+    <title>Pabla Marmolejo Porftolio UX/UI Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lora:wght@700&display=swap" rel="stylesheet">
@@ -13,8 +13,8 @@
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 0.707107 0.707107 -0.707107 11 12.1211)" fill="#F4EADD"/>
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 -0.707107 -0.707107 -0.707107 13.1213 34.749)" fill="#F4EADD"/>
         </svg>
-        <a href="../work">Work</a>
-        <a href="../about">About</a> 
+        <a href="./work/index.html">Work</a>
+        <a href="./about/index.html">About</a> 
     </nav>
 
 <div id="main-page">
@@ -35,7 +35,7 @@
         <nav>
             <ul class="nav-links">
                 <li>
-                    <a id="work" href="../work">Work</a>
+                    <a href="../work">Work</a>
                 </li>
                 <li>
                     <a href="../about">About</a>
@@ -58,212 +58,17 @@
                 <path d="M12.5 11.8C12.8315 11.8 13.1495 11.6736 13.3839 11.4485C13.6183 11.2235 13.75 10.9183 13.75 10.6V8.2C13.75 7.88174 13.6183 7.57652 13.3839 7.35147C13.1495 7.12643 12.8315 7 12.5 7C12.1685 7 11.8505 7.12643 11.6161 7.35147C11.3817 7.57652 11.25 7.88174 11.25 8.2V10.6C11.25 10.9183 11.3817 11.2235 11.6161 11.4485C11.8505 11.6736 12.1685 11.8 12.5 11.8ZM23.75 17.8H21.25C20.9185 17.8 20.6005 17.9264 20.3661 18.1515C20.1317 18.3765 20 18.6817 20 19C20 19.3183 20.1317 19.6235 20.3661 19.8485C20.6005 20.0736 20.9185 20.2 21.25 20.2H23.75C24.0815 20.2 24.3995 20.0736 24.6339 19.8485C24.8683 19.6235 25 19.3183 25 19C25 18.6817 24.8683 18.3765 24.6339 18.1515C24.3995 17.9264 24.0815 17.8 23.75 17.8ZM5 19C5 18.6817 4.8683 18.3765 4.63388 18.1515C4.39946 17.9264 4.08152 17.8 3.75 17.8H1.25C0.918479 17.8 0.600537 17.9264 0.366116 18.1515C0.131696 18.3765 0 18.6817 0 19C0 19.3183 0.131696 19.6235 0.366116 19.8485C0.600537 20.0736 0.918479 20.2 1.25 20.2H3.75C4.08152 20.2 4.39946 20.0736 4.63388 19.8485C4.8683 19.6235 5 19.3183 5 19ZM5.275 10.6C5.03133 10.3788 4.70612 10.2596 4.37089 10.2686C4.03567 10.2776 3.71791 10.4141 3.4875 10.648C3.25709 10.8819 3.13292 11.1941 3.1423 11.5159C3.15167 11.8378 3.29383 12.1428 3.5375 12.364L5.3375 14.032C5.45829 14.144 5.60135 14.2314 5.75813 14.2892C5.9149 14.3469 6.08219 14.3737 6.25 14.368C6.41838 14.3674 6.5849 14.3341 6.73955 14.2702C6.89421 14.2063 7.03382 14.113 7.15 13.996C7.38281 13.7712 7.51349 13.467 7.51349 13.15C7.51349 12.833 7.38281 12.5288 7.15 12.304L5.275 10.6ZM18.75 14.368C19.0718 14.3668 19.3808 14.2464 19.6125 14.032L21.4125 12.364C21.6321 12.1437 21.7561 11.8515 21.7594 11.5466C21.7626 11.2418 21.6449 10.9472 21.4301 10.7226C21.2153 10.4981 20.9195 10.3604 20.6028 10.3376C20.2861 10.3149 19.9723 10.4087 19.725 10.6L17.925 12.304C17.6922 12.5288 17.5615 12.833 17.5615 13.15C17.5615 13.467 17.6922 13.7712 17.925 13.996C18.1414 14.2153 18.436 14.3481 18.75 14.368ZM12.5 26.2C12.1685 26.2 11.8505 26.3264 11.6161 26.5515C11.3817 26.7765 11.25 27.0817 11.25 27.4V29.8C11.25 30.1183 11.3817 30.4235 11.6161 30.6485C11.8505 30.8736 12.1685 31 12.5 31C12.8315 31 13.1495 30.8736 13.3839 30.6485C13.6183 30.4235 13.75 30.1183 13.75 29.8V27.4C13.75 27.0817 13.6183 26.7765 13.3839 26.5515C13.1495 26.3264 12.8315 26.2 12.5 26.2ZM19.6625 23.968C19.4238 23.7468 19.1034 23.6257 18.7717 23.6313C18.4399 23.637 18.1242 23.7689 17.8938 23.998C17.6633 24.2271 17.5372 24.5348 17.5431 24.8532C17.5489 25.1716 17.6863 25.4748 17.925 25.696L19.725 27.4C19.9567 27.6144 20.2657 27.7348 20.5875 27.736C20.755 27.7369 20.921 27.7056 21.0756 27.6437C21.2302 27.5819 21.3703 27.4908 21.4875 27.376C21.6047 27.2644 21.6977 27.1317 21.7611 26.9855C21.8246 26.8393 21.8572 26.6824 21.8572 26.524C21.8572 26.3656 21.8246 26.2087 21.7611 26.0625C21.6977 25.9163 21.6047 25.7836 21.4875 25.672L19.6625 23.968ZM5.3375 23.968L3.5375 25.636C3.42034 25.7476 3.32735 25.8803 3.26389 26.0265C3.20043 26.1727 3.16775 26.3296 3.16775 26.488C3.16775 26.6464 3.20043 26.8033 3.26389 26.9495C3.32735 27.0957 3.42034 27.2284 3.5375 27.34C3.65474 27.4548 3.79482 27.5459 3.94943 27.6077C4.10404 27.6696 4.27001 27.7009 4.4375 27.7C4.74564 27.7025 5.0439 27.5957 5.275 27.4L7.075 25.732C7.31369 25.5108 7.45108 25.2076 7.45695 24.8892C7.46281 24.5708 7.33666 24.2631 7.10625 24.034C6.87584 23.8049 6.56005 23.673 6.22835 23.6673C5.89664 23.6617 5.57619 23.7828 5.3375 24.004V23.968ZM12.5 14.2C11.5111 14.2 10.5444 14.4815 9.72215 15.0089C8.8999 15.5364 8.25904 16.286 7.8806 17.1631C7.50216 18.0402 7.40315 19.0053 7.59607 19.9364C7.789 20.8675 8.2652 21.7228 8.96447 22.3941C9.66373 23.0654 10.5546 23.5226 11.5245 23.7078C12.4945 23.893 13.4998 23.7979 14.4134 23.4346C15.327 23.0713 16.1079 22.4561 16.6573 21.6667C17.2068 20.8774 17.5 19.9493 17.5 19C17.5 17.727 16.9732 16.5061 16.0355 15.6059C15.0979 14.7057 13.8261 14.2 12.5 14.2V14.2Z" fill="#23211E"/>
         </svg>    
     </div>
-    <main id="work">
+    <main id="home">
         <div id="heading">
-            <div class="double-title">
-                <div>Case</div>
-                <div class="second-line-title">Study</div>
+            <div class="double-title"> 
+                <div>404 HIDDEN</div>
+                <div class="second-line-title">PAGE</div>
             </div>
-            <div class="double-title home">Case Study</div>
-            <h1 class="project">Adecco</h1>
-        </div>
-        <div id="projects">
-            <div class="description">
-                <img src="../assets/img/adecco-cover.png" />
-            </div>
-            <div class="project-intro">
-                <div class="project-title">
-                    <h2>The Project</h2>
-                </div>
-                <h3>TL;DR</h3>
-                <p>
-                    Adecco’s registration platform failed to provide 
-                    users with enough feedback, so that the process 
-                    would be error-free. In this case study, I proposed 
-                    simple changes in user flow regarding error 
-                    prevention and feedback that could improve 
-                    the overall user experience.
-                </p>
-                <h3>Role</h3>
-                <p>
-                    UX/UI Designer
-                </p>
-                <h3>Tools</h3>
-                <p>
-                    Figma, Adobe Photoshop
-                </p>
-            </div>
-        </div>
-        <div class="the-section">
-            <div class="wrapper">
-                <h3>The client</h3>
-                <p>
-                    Adecco is a human resource company that provides 
-                    temporary employment and other services such as 
-                    formation and talent development, among others.
-                </p>
-            </div>
-            <div class="wrapper">
-                <h3>The problem</h3>
-                <p>
-                    During the registration process for new 
-                    candidates, the system fails to provide 
-                    a way to revert or fix errors, or doesn't 
-                    give enought information on how to prevent 
-                    users from making them.
-                </p>
-                <h4>This is reflected in:</h4>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            The user is asked to upload a CV after filling 
-                            in a form with personal information, but if the 
-                            file weights more than 5MB, not only the user 
-                            can't upload the file, but also they don't get 
-                            a second chance at uploading said file.
-                        </p>
-                        <img src="../assets/img/adecco-original-design-1.png" />
-                    </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/adecco-original-design-2.png" />
-                        <p>
-                            The registration form contains too many text fields 
-                            that make the process longer than it should be. For 
-                            instance, birth data is split in three sections for 
-                            day, month, and year.
-                        </p>
-                        <h4>Defining project goals</h4>
-                        <p>
-                            With this redesign, it is expected to provide 
-                            the user with more information about the registration 
-                            process, so that they avoid making mistakes. 
-                            Additionally, if the user does make mistakes, 
-                            the redesign would allow them to start over or 
-                            have a chance to redo the action.
-                        </p>
-                        <p>
-                            Also, the redesign aims to make the resgitration 
-                            process more efficient and smooth.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="the-section">
-            <div class="wrapper">
-                <h3>The research</h3>
-                <h4>Identifying the problems</h4>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            After analysing the website, there were two main 
-                            problems: Error prevention and forms.
-                        </p>
-                        <p>
-                            The main design principles from the Nielsen Norman Group that apply to this project are the following:
-                        </p>
-                        <p>
-                            No.1 Visibility of system status:
-                            It is important to tell the user what's happening during the process.
-                        </p>
-                        <p>
-                            No.3 User control and freedom:
-                            Users value being able to navigate through a system that lets them undo actions or have an "emergency exit".
-                        </p>
-                        <p>
-                            No.5 Error prevention:
-                            Design should prevent errors from happening, either by giving useful information about an action or by validating said action.
-                        </p>
-                        <p>
-                            No.9 Help users recognize, diagnose, and recover from errors:
-                            If an error occurs, inform the user about this error and suggest ways to help them solve it.
-                        </p>
-                    </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/adecco-proto-persona.png" />
-                        <img src="../assets/img/adecco-customer.png" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="the-section">
-            <h3>The redesign</h3>
-            <div class="wrapper">
-                <div class="wrapper-flex">
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/adecco-sketch.png" />
-                    </div>
-                    <div class="text-wrapper-flex">
-                        <h4>Sketches and wireframes</h4>
-                        <p>
-                            Errors:
-                            The main focus of this redesign is to minimise errors 
-                            during the registration process. This includes error 
-                            messages, undo or skip actions, or modify information later on.
-                        </p>
-                        <p>
-                            Forms:
-                            This would include relevant information about 
-                            each step, and it would be easy to use.
-                        </p>
-                    </div>
-                </div>
-            </div>
-            <div class="wrapper">
-                <h4>Prototyping</h4>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            The text fields were reduced by grouping similar fields, 
-                            such as name and last name, and birth information.
-                        </p>
-                        <p>
-                            The steps or the progress bar was relocated 
-                            to a place where was easier to find.
-                        </p>
-                        <img src="../assets/img/adecco-original-design-1.png" />
-                    </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/adecco-redesign-2.png" />
-                    </div>
-                </div>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            Uploading the users' CV was a critical step during the registration process.
-                            The original design didn't include this as part of the process itself.
-                            In this redesign, it was added as another step, we gave information 
-                            to prevent errors, messages to inform if errors occured, and options to redo an action.
-                        </p>
-                        <img src="../assets/img/adecco-original-design-2.png" />
-                    </div>
-                    <div class="img-wrapper-flex">
-                        <img src="../assets/img/adecco-redesign-3.png" />
-                        <img src="../assets/img/adecco-redesign-4.png" />
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="the-section">
-            <div class="wrapper">
-                <h3>Conclusion</h3>
-                <div class="wrapper-flex">
-                    <div class="text-wrapper-flex">
-                        <p>
-                            This redesign is a case study of how to solve 
-                            the problems that the original website presented.
-                        </p>
-                        <p>
-                            We addressed problems such as error prevention, 
-                            giving the user more context about the process. 
-                            This allowed them to know what to expect, and 
-                            know what to do when an error occured. 
-                            It was a first glance at UX research.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <div class="double-title home">404 HIDDEN PAGE</div>
+            <h1 id="home-title">Work in progress 🪜🪚</h1>
+        </div>    
+        <!--
+
         <div id="contact">
             <div class="section-1">
                 <div>
@@ -296,6 +101,7 @@
                 <h4>Shall we begin?</h4>
             </div>
         </div>
+        -->
     </main>
     <footer>
         <div id="logo">
@@ -310,8 +116,8 @@
                 </svg>
                 <a href="../index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="../hidden-page/">Don't tap here</a>
-            <a class="funny-link-desktop" href="../hidden-page/">Don't click here</a>
+            <a class="funny-link-mobile" href="./index.html">Don't tap here</a>
+            <a class="funny-link-desktop" href="./index.html">Don't click here</a>
         </div>
     </footer>
 </div>
