--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
         <nav>
             <ul class="nav-links">
                 <li>
-                    <a href="./work/index.html">Work</a>
+                    <a href="./work">Work</a>
                 </li>
                 <li>
-                    <a href="./about/index.html">About</a>
+                    <a href="./about">About</a>
                 </li>
             </ul>
             <div id="menu-open">
@@ -99,7 +99,7 @@
                                 Class exercise which consisted in designing the landing page of a made-up travel agency. 
                                 The design involved working with elements such as content, typography, images, colours, and layout.
                             </p>
-                            <a href="./project-space-travel/index.html">I want to know more</a>
+                            <a href="./project-space-travel">I want to know more</a>
                         </div>
                     </div>
                     <div class="project-section invert">
@@ -111,7 +111,7 @@
                                 Case study focused on solving problems in the original design, such as error prevention, 
                                 registration process and forms.
                             </p>
-                            <a href="./project-adecco/index.html">I want to know more</a>
+                            <a href="./project-adecco">I want to know more</a>
                         </div>
                     </div>
                     <div class="project-section">
@@ -123,7 +123,7 @@
                                 Case study focused on redesigning an e-commerce website and making 
                                 it more accessible for any kind of users.
                             </p>
-                            <a href="./project-antartica-libros/index.html">I want to know more</a>
+                            <a href="./project-antartica-libros">I want to know more</a>
                         </div>
                     </div>
                 </div>
@@ -176,8 +176,8 @@
                 </svg>
                 <a href="./index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="">Don't tap here</a>
-            <a class="funny-link-desktop" href="">Don't click here</a>
+            <a class="funny-link-mobile" href="./hidden-page/">Don't tap here</a>
+            <a class="funny-link-desktop" href="./hidden-page/">Don't click here</a>
         </div>
     </footer>
 </div>
