--- a/project-antartica-libros/index.html
+++ b/project-antartica-libros/index.html
@@ -13,8 +13,8 @@
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 0.707107 0.707107 -0.707107 11 12.1211)" fill="#F4EADD"/>
             <rect width="32" height="3" rx="1.5" transform="matrix(0.707107 -0.707107 -0.707107 -0.707107 13.1213 34.749)" fill="#F4EADD"/>
         </svg>
-        <a href="../work/index.html">Work</a>
-        <a href="../about/index.html">About</a> 
+        <a href="../work">Work</a>
+        <a href="../about">About</a> 
     </nav>
 
 <div id="main-page">
@@ -35,10 +35,10 @@
         <nav>
             <ul class="nav-links">
                 <li>
-                    <a id="work" href="../work/index.html">Work</a>
+                    <a id="work" href="../work">Work</a>
                 </li>
                 <li>
-                    <a href="../about/index.html">About</a>
+                    <a href="../about">About</a>
                 </li>
             </ul>
             <div id="menu-open">
@@ -359,8 +359,8 @@
                 </svg>
                 <a href="../index.html">Pabla Marmolejo</a>
             </div>
-            <a class="funny-link-mobile" href="">Don't tap here</a>
-            <a class="funny-link-desktop" href="">Don't click here</a>
+            <a class="funny-link-mobile" href="../hidden-page/">Don't tap here</a>
+            <a class="funny-link-desktop" href="../hidden-page/">Don't click here</a>
         </div>
     </footer>
 </div>
