update main page

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     My name is <span class="bold-text">Pabla</span>, and I’m a UX/UI designer based in Barcelona.
                 </p>
                 <p>
-                    Check out my work, and have a <span class="bold-text">look around</span>, no presure. Mi casa es su casa.
+                    Check out my work, and have a <span class="bold-text">look around</span>, no pressure. Mi casa es su casa.
                 </p>
             </div>
         </div>
